--- a/sample_built_app/Dockerfile
+++ b/sample_built_app/Dockerfile
@@ -1,3 +1,4 @@
 FROM corporatebuilder:latest
 
 COPY files/app.jar /opt/openshift/app.jar
+CMD ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/opt/openshift/app.jar"]
